--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <h2>TEAM</h2>
             <div class="testimonial-list">
                 <div class="testimonial-item">
-                    <p>"Mary Cyndiya S"</p>
+                    <p>"Mary Cyndia S"</p>
                     <span>- Mentor</span>
                 </div>
                 <div class="testimonial-item">
