--- a/index2.html
+++ b/index2.html
@@ -24,10 +24,25 @@
         <h1>HEALTH MONITORING</h1>
         <p class="contain">
             <center><br>
-           content
+                <div class="health-monitor">
+           <div class="heart-gif-box">
+            <img src="heart beat gif.gif" class="heart-gif" width="30%" >
+           <br><h4 class="heding-heart-rate">HEART RATE</h4>
+           </div>
             <br><br>
-            <b>any topic</b><br>
-            <img class="Interruptimg" src="" alt="any image"><br><br>
+            <div class="temperature-gif-box">
+                <img src="temperature-gif.gif" class="temprature-gif" width="30%" >
+               <br><h4 class="heding-temprature-rate">YOUR BODY TEMPERATURE</h4>
+               </div>
+                <br><br>
+            <div class="blood-o2-gif-box">
+                    <img src="blood-o2-gif.gif" class="blood-o2-gif" width="30%" >
+                   <br><h4 class="heding-blood-o2-rate">BLOOD O2 LEVEL</h4>
+                   </div>
+                    <br><br>
+                </div>
+            <b></b><br>
+           <!-- <img class="Interruptimg" src="" alt="any image"><br><br>-->
             <a href="index.html" class="cta-button">Back</a>
         </center>
         </p>
