--- a/index3.html
+++ b/index3.html
@@ -21,13 +21,24 @@
     </header>
     <div class="Interrupttext">
         <br><br>
-        <h1>COMMUNICATIONs</h1>
+        <h1>COMMUNICATION</h1>
         <p class="contain">
             <center><br>
-          CONTENT
+                <div class="search"> 
+                    <div class="search-top">
+                    search bar
+                </div>
+                </div>
+                <div class="img-search-box">
+                    ask your qustion.... 
+                    <img src="mag-glass.webp" class="img-search" width="30px" height="30px">
+                </div>
+
+         <!--CONTENT
             <b>any pic</b><br>
             <img class="Hackerrupptimg" src="#" alt="any image"><br><br>
-            <img class="Hackerrupptimg" src="#" alt="any img"><br><br>
+            <img class="Hackerrupptimg" src="#" alt="any img"><br><br>-->
+           <br>
             <a href="index.html" class="cta-button">Back</a>
         </center>
         </p>
