--- a/index4.html
+++ b/index4.html
@@ -23,11 +23,17 @@
         <br><br>
         <h1>SAFETY ALERTS & ASSISTANCE</h1>
         <p class="contain">
-            <center><br>
+            <center>
+
+                <div class="map-box">
+                   <a href="https://maps.app.goo.gl/rNFU8jjPuNdtC9tT7"> <img class="map-gif" src="location-gif.gif" ></a>
+                </div>
+                <br>
+                <!--<br>
            content??
                 <b>GALLERY</b><br>
             <img class="acetalksimg" src="#" alt="ACE Talks Odyssey"><br><br>
-            <img class="acetalksimg" src="#" alt="ACE Talks Odyssey2"><br><br>
+            <img class="acetalksimg" src="#" alt="ACE Talks Odyssey2"><br><br>-->
             <a href="index.html" class="cta-button">Back</a>
         </center>
         </p>
